[package]
name = "tmux-fzy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple project manager for tmux" 

[[bin]]
name = "tmux-fzy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
crossterm = "0.26.1"
clap = {version = "4.3.4", features = ["derive"]}
serde = { version = "1.0.164", features = ["derive"] }
toml = "0.7.4"
dirs = "5.0.1"
thiserror = "1.0.40"
walkdir = "2.3.3"
anyhow = "1.0.71"
fuzzy-matcher = "0.3.7"
