[package]
name = "tmux-fzy"
version = "0.2.2"
rust-version = "1.73.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/sachnr/tmux-fzy"
readme = "readme.md"
description = "A simple project manager for tmux" 

[[bin]]
name = "tmux-fzy"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.23.0"
crossterm = "0.27.0"
clap = {version = "4.4.6", features = ["derive"]}
anyhow = "1.0.75"
thiserror = { version = "1.0.49"} 
fuzzy-matcher = "0.3.7"
walkdir = "2.4.0"
once_cell = "1.18.0"
