[package]
name = "tmux-fzy"
version = "0.2.4"
rust-version = "1.76.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sachnr/tmux-fzy"
readme = "readme.md"
description = "A simple project manager for tmux"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
rpath = false

[[bin]]
name = "tmux-fzy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.26.0", features = ["unstable-widget-ref"] }
crossterm = "0.27.0"
clap = { version = "4.5.0", features = ["derive"] }
anyhow = "1.0.79"
fuzzy-matcher = "0.3.7"
jwalk = "0.8.1"
